--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="modulepreload" href="/chat_wasm/assets/vendor.63a8cbfa.js">
 		<link rel="stylesheet" href="/chat_wasm/assets/index.b6aed09f.css">
 	</head>
-
+	<meta charset="utf-8">
 	
 
 	<body>
