--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	
 
 	<body>
-		<h1>WONNX: Squeeze image classification</h1>
+		<h1>WONNX: Squeeze image classification updated</h1>
 		<div id="log">Loading... (If this doesn't load, you may have to enable WebGPU in your browser and reload this page)</div>
 		<video id="player" autoplay width="224" height="224"></video>
 		<div id="perf"></div>
